@startuml 数据库关系图_用户与预约
skinparam backgroundColor #FEFEFE
skinparam defaultFontName Microsoft YaHei
skinparam defaultFontSize 11

title 数据库关系图 - 用户与预约模块

entity "huiyuan\n会员表" as HY {
    * id : BIGINT <<PK>>
    yonghuzhanghao : VARCHAR <<UK>>
    xingming : VARCHAR
    mima : VARCHAR
    shouji : VARCHAR
}

entity "changdixinxi\n场地信息表" as CD {
    * id : BIGINT <<PK>>
    changdimingcheng : VARCHAR
    changdidizhi : VARCHAR
    changdijiage : DECIMAL
}

entity "changdiyuyue\n场地预约表" as CDYY {
    * id : BIGINT <<PK>>
    changdimingcheng : VARCHAR <<FK>>
    yonghuzhanghao : VARCHAR <<FK>>
    shijianduan : VARCHAR
    yuyueshijian : DATETIME
    sfsh : VARCHAR
}

entity "kechengxinxi\n课程信息表" as KC {
    * id : BIGINT <<PK>>
    kechengmingcheng : VARCHAR
    jiaolian : VARCHAR
    shangkeshijian : VARCHAR
}

entity "kechengyuyue\n课程预约表" as KCYY {
    * id : BIGINT <<PK>>
    kechengmingcheng : VARCHAR <<FK>>
    yonghuzhanghao : VARCHAR <<FK>>
    yuyueshijian : DATETIME
    sfsh : VARCHAR
}

HY ||--o{ CDYY : "1:N 预约"
CD ||--o{ CDYY : "1:N 被预约"
HY ||--o{ KCYY : "1:N 预约"
KC ||--o{ KCYY : "1:N 被预约"

@enduml
